--- a/WpfDemo/MainWindow.xaml
+++ b/WpfDemo/MainWindow.xaml
@@ -3,30 +3,24 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfDemo"
+        xmlns:prism="http://prismlibrary.com/"
+        prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
-        Title="Тестовое приложение" Height="150" Width="300
-        ">
-    <Window.Resources>
-        <ObjectDataProvider x:Key="MainViewModel" ObjectType="{x:Type local:MainViewModel}" >
-            <ObjectDataProvider.ConstructorParameters>
-                <local:MainModel/>
-            </ObjectDataProvider.ConstructorParameters>
-        </ObjectDataProvider>
-    </Window.Resources>
+        Title="Тестовое приложение" Height="150" Width="300" >
     <Grid Margin="10,0,10,0" Name="MainGrid" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="59*"/>
             <ColumnDefinition Width="241*"/>
         </Grid.ColumnDefinitions>
-        <TextBox 
-            Text="{Binding Source={StaticResource MainViewModel}, Path=MainText}"
+        <TextBox
+            Text="{Binding Path=MainText, FallbackValue='No binding', Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             HorizontalAlignment="Left" Height="24" Margin="0,10,0,0" TextWrapping="Wrap"
             Width="{Binding ActualWidth, ElementName=MainGrid}"
             VerticalAlignment="Top" Grid.Column="1" RenderTransformOrigin="0.44,0.608" Grid.ColumnSpan="2"/>
-
-        <Label Content="{Binding Source={StaticResource MainViewModel}, Path=MainTextLabel}" BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="26" Margin="0,38,0,0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=MainGrid}" Grid.Column="1" Grid.ColumnSpan="2" />
-        <Button Content="Отправить" Command="{Binding Source={StaticResource MainViewModel}, Path=SendText}"  HorizontalAlignment="Right" Height="20" Margin="3,74,10,0" VerticalAlignment="Top" Width="80" Grid.Column="2"/>
+        <Border BorderThickness="1" BorderBrush="Black" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="0,38,0,0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=MainGrid}">
+            <TextBlock Text="{Binding Path=MainTextLabel, FallbackValue='No binding'}" Height="24" />
+        </Border>
+        <Button Content="Отправить" Command="{Binding Path=SendText, FallbackValue=null}"  HorizontalAlignment="Right" Height="20" Margin="3,74,10,0" VerticalAlignment="Top" Width="80" Grid.Column="2"/>
     </Grid>
 </Window>
